Fix styling of edit publish and talk contine buttons
Fix the following issues which are described in
https://phabricator.wikimedia.org/T229440#5490743:
* The edit publish button should not be clipped
* Restore CSS rules to the talk button that was removed
in I5b8ac44f50d26767304fe42eb2a2ba3e9128aca4 - scope it specifically
to the talk button

--- a/resources/mobile.editor.overlay/editor.less
+++ b/resources/mobile.editor.overlay/editor.less
@@ -27,6 +27,10 @@
 		// The border will only be visible on screens >1000px due to max-width set elsewhere.
 		outline: 1px solid #c8ccd1;
 
+		.continue {
+			width: auto;
+		}
+
 		.oo-ui-toolbar-bar,
 		.oo-ui-toolbar-popups {
 			border-collapse: separate;
