--- a/resources/mobile.startup/Overlay.less
+++ b/resources/mobile.startup/Overlay.less
@@ -182,6 +182,10 @@
 		.progressive {
 			background-color: @colorProgressive;
 			color: #fff;
+			width: auto;
+			padding: 0 1.2em;
+			display: table-cell;
+			vertical-align: middle;
 
 			&[ disabled ] {
 				background-color: @colorGray12;
